--- a/pathology_search/templates/pathology_search/print_report_pdf.html
+++ b/pathology_search/templates/pathology_search/print_report_pdf.html
@@ -1,4 +1,3 @@
-{% load custom_filters %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -199,10 +198,10 @@
     <!-- Critères diagnostiques validés -->
     <div class="section">
         <div class="section-title">CRITÈRES DIAGNOSTIQUES VALIDÉS</div>
-        {% for key, value in consultation.criteres_valides.items %}
+        {% for key, value in criteres_valides_clean.items %}
             <div class="criteria-item">
-                <div class="criteria-label">{{ key|clean_text|title }}</div>
-                <div>{{ value|clean_text }}</div>
+                <div class="criteria-label">{{ key|title }}</div>
+                <div>{{ value }}</div>
             </div>
         {% empty %}
             <div class="criteria-item">Aucun critère spécifique validé</div>
@@ -212,7 +211,7 @@
     <!-- Plan de traitement -->
     <div class="section">
         <div class="section-title">PLAN DE TRAITEMENT RECOMMANDÉ</div>
-        <div class="text-content">{{ consultation.plan_traitement|clean_text }}</div>
+        <div class="text-content">{{ plan_traitement_clean }}</div>
     </div>
     
     <!-- Pied de page -->
