Move logo to left side of header

--- a/pathology_search/templates/pathology_search/base.html
+++ b/pathology_search/templates/pathology_search/base.html
@@ -139,7 +139,7 @@
     <!-- Navigation -->
     <nav class="gradient-bg shadow-lg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-center h-16">
+            <div class="flex h-16">
                 <a href="{% url 'pathology_search:index' %}" class="flex items-center hover:opacity-80 transition-opacity cursor-pointer">
                     <i class="fas fa-heartbeat text-white text-xl sm:text-2xl mr-2 sm:mr-3"></i>
                     <span class="text-white text-base sm:text-xl font-bold">Recherche Pathologie</span>
